@@ -1,0 +1,68 @@
+/* Copyright (c) 2015 Jesper Öqvist <jesper@llbit.se>
+ *
+ * This file is part of Chunky.
+ *
+ * Chunky is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Chunky is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with Chunky.  If not, see <http://www.gnu.org/licenses/>.
+ */
+package se.llbit.chunky.model;
+
+import se.llbit.chunky.resources.AnimatedTexture;
+import se.llbit.chunky.resources.Texture;
+import se.llbit.chunky.world.BlockData;
+import se.llbit.math.Quad;
+import se.llbit.math.Ray;
+import se.llbit.math.Vector3d;
+import se.llbit.math.Vector4d;
+
+@SuppressWarnings("javadoc")
+public class FireModel {
+	protected static Quad[] quads = {
+		new Quad(new Vector3d(0, 0, 0), new Vector3d(1, 0, 1),
+				new Vector3d(0, 1, 0), new Vector4d(0, 1, 0, 1)),
+
+		new Quad(new Vector3d(1, 0, 0), new Vector3d(0, 0, 1),
+				new Vector3d(1, 1, 0), new Vector4d(0, 1, 0, 1)),
+
+		new Quad(new Vector3d(1, 0, 1), new Vector3d(0, 0, 0),
+				new Vector3d(1, 1, 1), new Vector4d(1, 0, 0, 1)),
+
+		new Quad(new Vector3d(0, 0, 1), new Vector3d(1, 0, 0),
+				new Vector3d(0, 1, 1), new Vector4d(1, 0, 0, 1)),
+	};
+
+	private static final AnimatedTexture[] texture = { Texture.fireLayer0, Texture.fireLayer1 };
+
+	public static boolean intersect(Ray ray) {
+		boolean hit = false;
+		ray.t = Double.POSITIVE_INFINITY;
+		int i = 0xF & (ray.getCurrentData() >> BlockData.LILY_PAD_ROTATION);
+		int j = 0;
+		for (Quad quad : quads) {
+			if (quad.intersect(ray)) {
+				float[] color = texture[j].getColor(ray.u, ray.v, i);
+				if (color[3] > Ray.EPSILON) {
+					ray.color.set(color);
+					ray.t = ray.tNext;
+					ray.n.set(quad.n);
+					hit = true;
+				}
+			}
+			j = 1 - j;
+		}
+		if (hit) {
+			ray.distance += ray.t;
+			ray.o.scaleAdd(ray.t, ray.d);
+		}
+		return hit;
+	}
+}
